Added some commentaries

--- a/kr_1/index.html
+++ b/kr_1/index.html
@@ -12,7 +12,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-   <title>Вариант 7</title>
+   <title>Вариант 10</title>
 </head>
 
 <body>
@@ -22,6 +22,14 @@
          <div class="panel-heading">
             <h4>Задание 1</h4>
          </div>
+
+         <!-- Блок, где осуществляется ввод данных для первого задания.
+         У каждого <input> есть свой идентификтор, по которому
+         можно обратиться и получить его значение.
+         В блоке не используется тег <button>, потому что для корректной работы <button>
+         устанавливается параметр <type="submit"> внутри <form> (формы), который используется 
+         для отправки данных с формы на сервер. Для реализации простой кнопки взят <a> с <href="#">.
+         Такой параметр устанавливается, чтобы тег <a> стал кликабельным.-->
          <div class="panel-body">
             <h4>Исходные данные</h4>
             <form>
@@ -42,6 +50,7 @@
                <a href="#" id="calcTask1" class="btn btn-primary">Посчитать</a>
             </form>
          </div>
+         <!-- Ответ добавляется внутрь под тег div -->
          <div class="panel-footer">
             <h4>Ответ</h4>
             <div id="resultTask1">
@@ -49,6 +58,7 @@
          </div>
       </div>
 
+      <!-- По аналогии со 2 заданием -->
       <div class="panel panel-primary mt-5">
          <div class="panel-heading">
             <h4>Задание 2</h4>
@@ -76,6 +86,14 @@
          </div>
       </div>
 
+      <!-- Здесь 5 блоков.
+      Первый - селектор. Через выпадающее меню выбирается, 
+      что будет отрисовано под ним.
+      Таким образом реализовано переключение между задачами в 3 задании.
+      Следующие 3 блока работают по аналогии с выше приведенными.
+      Последний блок отрисовывает таблицу - массив, с которым
+      производится вся работа в данном задании.
+      Массив отрисовывается динамически, т.е. любое изменение в нем будет отражено. -->
       <div class="panel panel-primary mt-5">
          <div class="panel-heading">
             <h4>Задание 3</h4>
@@ -156,7 +174,19 @@
 
    <script type="text/javascript">
 
-      // Задание 1 
+      // Задание 1
+      // 
+      // Для запуска функции по клику используем систему событий и jquery.
+      // Для этого на тег <a> "вешается" событие click(), внутри которой написана наша функция.
+      // При дальнейшем клике на тег она будет вызвана.
+      // Тег <a> сделан кликабельным. "#" внутри <href> указывает
+      // идентификатор элемента html, к которому будет прокручено окно (скролл установится
+      // около элемента с указанным id), но т.к. после # идентификатор не указан,
+      // скролл будет прокручен к началу страницы. Чтобы это предотвратить, используется
+      // метод класса Event preventDefault(), который отменяет возможное для отмены действие.
+      // Далее с помощью идентификаторов получаем значения с полей ввода, очищаем поле
+      // с ответом, если там уже что-то было (предыдущее решение). Производим расчет и 
+      // и добавляем результат с помощью append(). 
       $('#calcTask1').click(function(e) {
          e.preventDefault();
          let xValue = $('#inputX1').val();
@@ -181,6 +211,8 @@
       });
 
       // Задание 2
+      //
+      // По аналогии все то же самое тут
       $('#calcTask2').click(function(e) {
          e.preventDefault();
          let xValue = $('#inputX2').val();
@@ -208,9 +240,15 @@
       });
 
       // Задание 3
+
+      // Задание массива и его вывод
       var myArray = ['2019', '15', '-3.5', '13.37', '-207'];
       printArray(myArray);
 
+      // Функция вывода массива.
+      // С помощью jquery в таблицу внутрь <tbody> с помощью 
+      // id этого тега добавляются новые элементы. 
+      // Каждая строка таблицы - пара из номера элемента и его значения
       function printArray(arrayVar) {
          var tableBody;
          if (arrayVar.length == 0) {
@@ -229,6 +267,9 @@
          }
       }
 
+      // Просчет суммы и произведения всех элементов массива.
+      // Осущестляется за один обход цикла. Значения так же
+      // с помощью jquery добавляются в html в нужные поля
       function calcSummAndMultiply(arrayVar) {
          let summ = 0;
          let multiply = 1;
@@ -243,6 +284,11 @@
          $('#multiplyResId').val(multiply);
       }
 
+      // Добавляет в массив два значения по выбранному методу.
+      // Выбранный метод выбирается из выпадающего меню.
+      // Splice() кладет значения в середину массива, 
+      // unshift() - в начало,
+      // push() - в конец.
       function addNewElement(value1, value2, method) {
          switch (method) {
             case '1':
@@ -257,6 +303,8 @@
          }
       }
 
+      
+      // По аналогии с предыдущей функцией осуществляется удаление
       function removeElement(method) {
          switch (method) {
             case '1':
@@ -271,6 +319,9 @@
          }
       }
 
+      // По аналогии повесили событие click() для добавления нового
+      // значения в массив, которое по клику собирает значения с полей
+      // <input> и вызывает функцию добавления новых элементов. 
       $('#calcTask4').click(function(e) {
          e.preventDefault();
          let val1 = $('#inputAddFirst').val();
@@ -280,6 +331,7 @@
          printArray(myArray);
       });
 
+      // Точно так же с удалением
       $('#calcTask5').click(function(e) {
          e.preventDefault();
          let method = $('#sel3').val();
@@ -287,6 +339,11 @@
          printArray(myArray);
       });
 
+
+      // Основное меню-селектор. Переключает то, что нужно отрисовать,
+      // остальное скрывает. Все это осуществляется с помощью функций 
+      // jquery hide() и show(), которые переключают параметр стиля
+      // "display". Все элементы, как и везде, берутся по своему идентификатору.
       $('#sel1').on('change', function() {
          switch(this.value) {
             case '1':
