Added some comms for the task 1

--- a/kyrs/index.html
+++ b/kyrs/index.html
@@ -28,6 +28,9 @@
    <script src="Kyrs.js"></script>
 
 
+   <!-- Cелектор. Через выпадающее меню выбирается, 
+   что будет отрисовано под ним.
+   Таким образом реализовано переключение между задачами в задании. -->
    <div class="container">
       <div class="row mt-5">
          <div class="form-group">
@@ -40,6 +43,17 @@
          </div>
       </div>
 
+      <!-- Блок, где осуществляется ввод входных данных для создания новой
+      записи в массиве. У каждого <input> есть свой идентификтор, по которому
+      с помощью jquery можно обратиться и получить его значение.
+      В данном и последующих блоках не используются кнопки (тег <button>),
+      потому что для корректной работы <button> устанавливается
+      параметр <type="submit"> внутри <form> (формы), который, в свою очередь,
+      используется для отправки данных с формы на сервер
+      (здесь нет реализации сервер-клиент).
+      Для создания простой кнопки взят <a> с параметром <href="#">.
+      Такой параметр устанавливается, чтобы тег <a> стал кликабельным,
+      и он не должен быть пустым. -->
       <div class="row mt-2" id="newPatient">
          <form>         
             <div class="form-row">
@@ -66,6 +80,8 @@
          </form>
       </div>
 
+      <!-- Блок с поиском записи в массиве. По аналогии с предыдущим,
+      работает по тому же принципу. -->
       <div class="row mt-2" id="findPatient" style="display: none">
          <form>         
             <div class="form-row">
@@ -78,6 +94,8 @@
          </form>
       </div>
 
+      <!-- Блок с поиском записи в массиве. По аналогии с предыдущим,
+      работает по тому же принципу. -->
       <div class="row mt-2" id="removePatient" style="display: none">
          <form>         
             <div class="form-row">
@@ -90,6 +108,10 @@
          </form>
       </div>
 
+      <!-- Таблица - отрисованный массив, с которым
+      производится вся работа в данном задании.
+      Массив отрисовывается динамически, т.е. любое изменение в нем будет отражено.
+      Динамичность обеспечивается методами jquery, описанными ниже и в классе Patient(). -->
       <div class="row mt-5">
          <table class="table table-condensed">
             <thead>
@@ -108,10 +130,20 @@
 
 
    <script type="text/javascript">
+
+      // Создание нового экземпляра нашего класса Patient() 
       let patient = new Patient();
 
+      // Печать содержимого массива. Результат добавляется внутрь
+      // тела таблицы под тег <tbody>, обладающий своим идентификатором.
+      // В итоге выстраивается таблица из массива по паре номер-значение.
       patient.printPatient();
 
+      // Jquery. Событие клика, которое отслеживается по тегу <a> с указанным
+      // id="addNewPatient". Когда осуществляется клик по тегу, вызывается
+      // ниже приведенная функция. 
+      // Функция добавления нового элемента в массив, которая берет со всех связанных 
+      // <input> значение и передает их методу add() класса Patient.
       $('#addNewPatient').click(function() {
          let newPatient = {
             patientNum: $('#inputPatientNum').val(),
@@ -124,15 +156,23 @@
          patient.printPatient();
       });
 
+      // Функция поиска элемента массива. По аналогии.
       $('#findPatientAction').click(function() {
          patient.findPatient($('#inputFindPatient').val());
       });
 
+      // Функция удаления элемента из массива. По аналогии.
+      // После удаления элемента вызывается снова печать массива.
       $('#removePatientAction').click(function() {
          patient.removePatient($('#inputRemovePatient').val());
          patient.printPatient();
       });
 
+      // Jquery. Событие изменения. Основной селектор меню.
+      // Когда происходит изменение выбранной опции из выпадающего списка,
+      // вызывается приведенная ниже функция.
+      // В зависимости от значения выбранной опции будет отрисован тот или иной блок.
+      // show() и hide() оперируют параметром стиля "display".
       $('select').on('change', function() {
 
          switch(this.value) {
